update functional tests according to R3.5