@@ -7,7 +7,6 @@ import org.junit.Test;
 import org.springframework.http.HttpStatus;
 import uk.gov.hmcts.reform.wataskmanagementapi.SpringBootFunctionalBaseTest;
 import uk.gov.hmcts.reform.wataskmanagementapi.controllers.request.SearchTaskRequest;
-import uk.gov.hmcts.reform.wataskmanagementapi.domain.TestAuthenticationCredentials;
 import uk.gov.hmcts.reform.wataskmanagementapi.domain.TestVariables;
 import uk.gov.hmcts.reform.wataskmanagementapi.domain.search.RequestContext;
 import uk.gov.hmcts.reform.wataskmanagementapi.domain.search.SearchOperator;
@@ -20,7 +19,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import static java.util.Arrays.asList;
 import static java.util.Collections.singletonList;
@@ -44,27 +42,23 @@ public class PostTaskSearchControllerTest extends SpringBootFunctionalBaseTest {
 
     private static final String ENDPOINT_BEING_TESTED = "task";
 
-    private TestAuthenticationCredentials caseworkerCredentials;
-    private TestAuthenticationCredentials granularPermissionCaseworkerCredentials;
-
     @Before
     public void setUp() {
-        caseworkerCredentials = authorizationProvider.getNewTribunalCaseworker("wa-ft-test-r2-");
-        granularPermissionCaseworkerCredentials = authorizationProvider
-            .getNewTribunalCaseworker("wa-granular-permission-");
+        waCaseworkerCredentials = authorizationProvider.getNewTribunalCaseworker(EMAIL_PREFIX_R3_5);
     }
 
     @After
     public void cleanUp() {
-        common.clearAllRoleAssignments(caseworkerCredentials.getHeaders());
-        common.clearAllRoleAssignments(granularPermissionCaseworkerCredentials.getHeaders());
-        authorizationProvider.deleteAccount(caseworkerCredentials.getAccount().getUsername());
-        authorizationProvider.deleteAccount(granularPermissionCaseworkerCredentials.getAccount().getUsername());
+        common.clearAllRoleAssignments(waCaseworkerCredentials.getHeaders());
+        authorizationProvider.deleteAccount(waCaseworkerCredentials.getAccount().getUsername());
+
+        common.clearAllRoleAssignments(baseCaseworkerCredentials.getHeaders());
+        authorizationProvider.deleteAccount(baseCaseworkerCredentials.getAccount().getUsername());
     }
 
     @Test
     public void should_return_a_200_with_search_results_and_correct_properties() {
-        common.setupWAOrganisationalRoleAssignment(caseworkerCredentials.getHeaders());
+        common.setupWAOrganisationalRoleAssignment(waCaseworkerCredentials.getHeaders());
 
         List<TestVariables> tasksCreated = new ArrayList<>();
 
@@ -76,8 +70,8 @@ public class PostTaskSearchControllerTest extends SpringBootFunctionalBaseTest {
         tasksCreated.add(taskVariables);
         initiateTask(taskVariables);
 
-        List<String> taskIds = tasksCreated.stream().map(TestVariables::getTaskId).collect(Collectors.toList());
-        List<String> caseIds = tasksCreated.stream().map(TestVariables::getCaseId).collect(Collectors.toList());
+        List<String> taskIds = tasksCreated.stream().map(TestVariables::getTaskId).toList();
+        List<String> caseIds = tasksCreated.stream().map(TestVariables::getCaseId).toList();
 
         SearchTaskRequest searchTaskRequest = new SearchTaskRequest(
             RequestContext.ALL_WORK,
@@ -92,7 +86,7 @@ public class PostTaskSearchControllerTest extends SpringBootFunctionalBaseTest {
         Response result = restApiActions.post(
             ENDPOINT_BEING_TESTED + "?first_result=0&max_results=10",
             searchTaskRequest,
-            caseworkerCredentials.getHeaders()
+            waCaseworkerCredentials.getHeaders()
         );
 
         result.then().assertThat()
@@ -121,7 +115,7 @@ public class PostTaskSearchControllerTest extends SpringBootFunctionalBaseTest {
             .body("tasks.warnings", everyItem(equalTo(false)))
             .body("tasks.case_management_category", everyItem(equalTo("Protection")))
             .body("tasks.work_type_id", everyItem(equalTo("hearing_work")))
-            .body("tasks.permissions.values", everyItem(equalToObject(List.of("Read", "Own"))))
+            .body("tasks.permissions.values", everyItem(equalToObject(List.of("Read", "Own", "Manage", "CompleteOwn", "CancelOwn", "Claim"))))
             .body("tasks.description", everyItem(equalTo("[Decide an application](/case/WA/WaCaseType/${[CASE_REFERENCE]}/"
                                                          + "trigger/decideAnApplication)")))
             .body("tasks.role_category", everyItem(equalTo("LEGAL_OPERATIONS")))
@@ -137,148 +131,6 @@ public class PostTaskSearchControllerTest extends SpringBootFunctionalBaseTest {
             .body("tasks.minor_priority", everyItem(equalTo(500)))
             .body("tasks.major_priority", everyItem(equalTo(1000)))
             .body("total_records", equalTo(2));
-
-        tasksCreated
-            .forEach(task -> common.cleanUpTask(task.getTaskId()));
-    }
-
-    @Test
-    public void should_return_a_200_with_search_results_and_correct_properties_for_granular_permission() {
-        List<TestVariables> tasksCreated = new ArrayList<>();
-
-        TestVariables taskVariables = common.setupWATaskAndRetrieveIds("requests/ccd/wa_case_data.json",
-            "processApplication",
-            "process application");
-        tasksCreated.add(taskVariables);
-        initiateTask(taskVariables);
-
-        taskVariables = common.setupWATaskAndRetrieveIds("requests/ccd/wa_case_data.json",
-                                                         "processApplication",
-                                                         "process application");
-        tasksCreated.add(taskVariables);
-        initiateTask(taskVariables);
-
-        common.setupHearingPanelJudgeForStandardAccess(granularPermissionCaseworkerCredentials.getHeaders(),
-            "WA",
-            "WaCaseType"
-        );
-
-        List<String> taskIds = tasksCreated.stream().map(TestVariables::getTaskId).collect(Collectors.toList());
-        List<String> caseIds = tasksCreated.stream().map(TestVariables::getCaseId).collect(Collectors.toList());
-
-        SearchTaskRequest searchTaskRequest = new SearchTaskRequest(
-            RequestContext.ALL_WORK,
-            asList(
-                new SearchParameterList(JURISDICTION, SearchOperator.IN, singletonList("WA")),
-                new SearchParameterList(LOCATION, SearchOperator.IN, singletonList("765324")),
-                new SearchParameterList(CASE_ID, SearchOperator.IN, caseIds)
-            )
-        );
-
-        Response result = restApiActions.post(
-            ENDPOINT_BEING_TESTED + "?first_result=0&max_results=10",
-            searchTaskRequest,
-            granularPermissionCaseworkerCredentials.getHeaders()
-        );
-
-        result.then().assertThat()
-            .statusCode(HttpStatus.OK.value())
-            .body("tasks.size()", lessThanOrEqualTo(10)) //Default max results
-            .body("tasks.id", everyItem(notNullValue()))
-            .body("tasks.id", hasItem(is(in(taskIds))))
-            .body("tasks.name", everyItem(equalTo("process application")))
-            .body("tasks.type", everyItem(equalTo("processApplication")))
-            .body("tasks.task_state", everyItem(equalTo("unassigned")))
-            .body("tasks.task_system", everyItem(equalTo("SELF")))
-            .body("tasks.security_classification", everyItem(equalTo("PUBLIC")))
-            .body("tasks.task_title", everyItem(equalTo("process application")))
-            .body("tasks.created_date", everyItem(notNullValue()))
-            .body("tasks.due_date", everyItem(notNullValue()))
-            .body("tasks.location_name", everyItem(equalTo("Taylor House")))
-            .body("tasks.location", everyItem(equalTo("765324")))
-            .body("tasks.execution_type", everyItem(equalTo("Case Management Task")))
-            .body("tasks.jurisdiction", everyItem(equalTo("WA")))
-            .body("tasks.region", everyItem(equalTo("1")))
-            .body("tasks.case_type_id", everyItem(equalTo("WaCaseType")))
-            .body("tasks.case_id", hasItem(is(in(caseIds))))
-            .body("tasks.case_category", everyItem(equalTo("Protection")))
-            .body("tasks.case_name", everyItem(equalTo("Bob Smith")))
-            .body("tasks.auto_assigned", everyItem(equalTo(false)))
-            .body("tasks.warnings", everyItem(equalTo(false)))
-            .body("tasks.case_management_category", everyItem(equalTo("Protection")))
-            .body("tasks.work_type_id", everyItem(equalTo("hearing_work")))
-            .body("tasks.permissions.values", everyItem(equalToObject(List.of("Manage"))))
-            .body("tasks.description", everyItem(equalTo("[Decide an application](/case/WA/WaCaseType/${[CASE_REFERENCE]}/"
-                                                         + "trigger/decideAnApplication)")))
-            .body("tasks.role_category", everyItem(equalTo("LEGAL_OPERATIONS")))
-            .body("tasks.next_hearing_id", everyItem(equalTo("next-hearing-id")))
-            .body("tasks.next_hearing_date", everyItem(notNullValue()))
-            .body("tasks.additional_properties", everyItem(equalToObject(Map.of(
-                "key1", "value1",
-                "key2", "value2",
-                "key3", "value3",
-                "key4", "value4"
-            ))))
-            .body("tasks.priority_date", everyItem(notNullValue()))
-            .body("tasks.minor_priority", everyItem(equalTo(500)))
-            .body("tasks.major_priority", everyItem(equalTo(1000)))
-            .body("total_records", equalTo(2));
-
-        tasksCreated
-            .forEach(task -> common.cleanUpTask(task.getTaskId()));
-    }
-
-    @Test
-    public void should_return_a_200_with_search_results_and_correct_properties_and_granular_permission() {
-
-        common.setupWAOrganisationalRoleAssignment(granularPermissionCaseworkerCredentials.getHeaders());
-        String roleAssignmentId = UUID.randomUUID().toString();
-        Map<String, String> additionalProperties = Map.of(
-            "roleAssignmentId", roleAssignmentId,
-            "key1", "value1",
-            "key2", "value2",
-            "key3", "value3",
-            "key4", "value4",
-            "key5", "value5",
-            "key6", "value6",
-            "key7", "value7",
-            "key8", "value8"
-        );
-        List<TestVariables> tasksCreated = new ArrayList<>();
-
-        TestVariables taskVariables = common.setupWATaskWithAdditionalPropertiesAndRetrieveIds(additionalProperties, "requests/ccd/wa_case_data.json", "reviewSpecificAccessRequestLegalOps");
-        tasksCreated.add(taskVariables);
-        initiateTask(taskVariables, additionalProperties);
-
-        taskVariables = common.setupWATaskWithAdditionalPropertiesAndRetrieveIds(additionalProperties, "requests/ccd/wa_case_data.json", "reviewSpecificAccessRequestLegalOps");
-        tasksCreated.add(taskVariables);
-        initiateTask(taskVariables, additionalProperties);
-
-        List<String> taskIds = tasksCreated.stream().map(TestVariables::getTaskId).collect(Collectors.toList());
-        List<String> caseIds = tasksCreated.stream().map(TestVariables::getCaseId).collect(Collectors.toList());
-
-        SearchTaskRequest searchTaskRequest = new SearchTaskRequest(
-            RequestContext.ALL_WORK,
-            asList(
-                new SearchParameterList(JURISDICTION, SearchOperator.IN, singletonList("WA")),
-                new SearchParameterList(LOCATION, SearchOperator.IN, singletonList("765324")),
-                new SearchParameterList(CASE_ID, SearchOperator.IN, caseIds)
-            )
-        );
-
-        Response result = restApiActions.post(
-            ENDPOINT_BEING_TESTED + "?first_result=0&max_results=10",
-            searchTaskRequest,
-            granularPermissionCaseworkerCredentials.getHeaders()
-        );
-
-        result.then().assertThat()
-            .statusCode(HttpStatus.OK.value())
-            .body("tasks.size()", lessThanOrEqualTo(10)) //Default max results
-            .body("tasks.name", everyItem(equalTo("process application")))
-            .body("tasks.case_management_category", everyItem(equalTo("Protection")))
-            .body("tasks.work_type_id", everyItem(equalTo("hearing_work")))
-            .body("tasks.permissions.values", everyItem(equalToObject(List.of("Read", "Own", "CompleteOwn", "CancelOwn", "Claim"))));
 
         tasksCreated
             .forEach(task -> common.cleanUpTask(task.getTaskId()));
@@ -286,7 +138,7 @@ public class PostTaskSearchControllerTest extends SpringBootFunctionalBaseTest {
 
     @Test
     public void should_return_200_with_task_with_additional_properties_which_includes_in_configuration_dmn() {
-        common.setupWAOrganisationalRoleAssignment(caseworkerCredentials.getHeaders());
+        common.setupWAOrganisationalRoleAssignment(waCaseworkerCredentials.getHeaders());
         String roleAssignmentId = UUID.randomUUID().toString();
         Map<String, String> additionalProperties = Map.of(
             "roleAssignmentId", roleAssignmentId,
@@ -309,8 +161,8 @@ public class PostTaskSearchControllerTest extends SpringBootFunctionalBaseTest {
         tasksCreated.add(taskVariables);
         initiateTask(taskVariables, additionalProperties);
 
-        List<String> taskIds = tasksCreated.stream().map(TestVariables::getTaskId).collect(Collectors.toList());
-        List<String> caseIds = tasksCreated.stream().map(TestVariables::getCaseId).collect(Collectors.toList());
+        List<String> taskIds = tasksCreated.stream().map(TestVariables::getTaskId).toList();
+        List<String> caseIds = tasksCreated.stream().map(TestVariables::getCaseId).toList();
 
         SearchTaskRequest searchTaskRequest = new SearchTaskRequest(
             RequestContext.ALL_WORK,
@@ -324,7 +176,7 @@ public class PostTaskSearchControllerTest extends SpringBootFunctionalBaseTest {
         Response result = restApiActions.post(
             ENDPOINT_BEING_TESTED + "?first_result=0&max_results=10",
             searchTaskRequest,
-            caseworkerCredentials.getHeaders()
+            waCaseworkerCredentials.getHeaders()
         );
 
         Map<String, String> expectedAdditionalProperties = Map.of("roleAssignmentId", roleAssignmentId);
@@ -342,7 +194,7 @@ public class PostTaskSearchControllerTest extends SpringBootFunctionalBaseTest {
 
     @Test
     public void should_return_200_with_tasks_sorted_on_next_hearing_date_desc() {
-        common.setupWAOrganisationalRoleAssignment(caseworkerCredentials.getHeaders());
+        common.setupWAOrganisationalRoleAssignment(waCaseworkerCredentials.getHeaders());
         List<TestVariables> tasksCreated = new ArrayList<>();
 
         TestVariables taskVariables = common.setupWATaskAndRetrieveIds("reviewSpecificAccessRequestLegalOps", "review Specific Access Request LegalOps");
@@ -353,8 +205,8 @@ public class PostTaskSearchControllerTest extends SpringBootFunctionalBaseTest {
         tasksCreated.add(taskVariables);
         initiateTask(taskVariables);
 
-        List<String> taskIds = tasksCreated.stream().map(TestVariables::getTaskId).collect(Collectors.toList());
-        List<String> caseIds = tasksCreated.stream().map(TestVariables::getCaseId).collect(Collectors.toList());
+        List<String> taskIds = tasksCreated.stream().map(TestVariables::getTaskId).toList();
+        List<String> caseIds = tasksCreated.stream().map(TestVariables::getCaseId).toList();
 
         SearchTaskRequest searchTaskRequest = new SearchTaskRequest(
             RequestContext.ALL_WORK,
@@ -369,7 +221,7 @@ public class PostTaskSearchControllerTest extends SpringBootFunctionalBaseTest {
         Response result = restApiActions.post(
             ENDPOINT_BEING_TESTED + "?first_result=0&max_results=10",
             searchTaskRequest,
-            caseworkerCredentials.getHeaders()
+            waCaseworkerCredentials.getHeaders()
         );
 
         result.prettyPrint();
@@ -387,7 +239,7 @@ public class PostTaskSearchControllerTest extends SpringBootFunctionalBaseTest {
 
     @Test
     public void should_return_a_200_with_role_category_ctsc() {
-        common.setupCFTCtscRoleAssignmentForWA(caseworkerCredentials.getHeaders());
+        common.setupCFTCtscRoleAssignmentForWA(waCaseworkerCredentials.getHeaders());
         List<TestVariables> tasksCreated = new ArrayList<>();
 
         TestVariables taskVariables
@@ -395,10 +247,10 @@ public class PostTaskSearchControllerTest extends SpringBootFunctionalBaseTest {
             "reviewAppealSkeletonArgument",
             "Review Appeal Skeleton Argument");
         tasksCreated.add(taskVariables);
-        initiateTask(taskVariables, caseworkerCredentials.getHeaders());
+        initiateTask(taskVariables, waCaseworkerCredentials.getHeaders());
 
-        List<String> taskIds = tasksCreated.stream().map(TestVariables::getTaskId).collect(Collectors.toList());
-        List<String> caseIds = tasksCreated.stream().map(TestVariables::getCaseId).collect(Collectors.toList());
+        List<String> taskIds = tasksCreated.stream().map(TestVariables::getTaskId).toList();
+        List<String> caseIds = tasksCreated.stream().map(TestVariables::getCaseId).toList();
 
         SearchTaskRequest searchTaskRequest = new SearchTaskRequest(asList(
             new SearchParameterList(JURISDICTION, SearchOperator.IN, singletonList("WA")),
@@ -409,7 +261,7 @@ public class PostTaskSearchControllerTest extends SpringBootFunctionalBaseTest {
         Response result = restApiActions.post(
             ENDPOINT_BEING_TESTED + "?first_result=0&max_results=10",
             searchTaskRequest,
-            caseworkerCredentials.getHeaders()
+            waCaseworkerCredentials.getHeaders()
         );
 
         result.then().assertThat()
@@ -452,10 +304,9 @@ public class PostTaskSearchControllerTest extends SpringBootFunctionalBaseTest {
             .forEach(task -> common.cleanUpTask(task.getTaskId()));
     }
 
-
     @Test
     public void should_return_200_with_tasks_sorted_on_next_hearing_date_asc() {
-        common.setupWAOrganisationalRoleAssignment(caseworkerCredentials.getHeaders());
+        common.setupWAOrganisationalRoleAssignment(waCaseworkerCredentials.getHeaders());
         List<TestVariables> tasksCreated = new ArrayList<>();
 
         TestVariables taskVariables = common.setupWATaskAndRetrieveIds("reviewSpecificAccessRequestLegalOps", "review Specific Access Request LegalOps");
@@ -466,10 +317,11 @@ public class PostTaskSearchControllerTest extends SpringBootFunctionalBaseTest {
         tasksCreated.add(taskVariables);
         initiateTask(taskVariables);
 
-        List<String> taskIds = tasksCreated.stream().map(TestVariables::getTaskId).collect(Collectors.toList());
-        List<String> caseIds = tasksCreated.stream().map(TestVariables::getCaseId).collect(Collectors.toList());
+        List<String> taskIds = tasksCreated.stream().map(TestVariables::getTaskId).toList();
+        List<String> caseIds = tasksCreated.stream().map(TestVariables::getCaseId).toList();
 
         SearchTaskRequest searchTaskRequest = new SearchTaskRequest(
+            RequestContext.AVAILABLE_TASKS,
             asList(
                 new SearchParameterList(JURISDICTION, SearchOperator.IN, singletonList("WA")),
                 new SearchParameterList(LOCATION, SearchOperator.IN, singletonList("765324")),
@@ -481,7 +333,7 @@ public class PostTaskSearchControllerTest extends SpringBootFunctionalBaseTest {
         Response result = restApiActions.post(
             ENDPOINT_BEING_TESTED + "?first_result=0&max_results=10",
             searchTaskRequest,
-            caseworkerCredentials.getHeaders()
+            waCaseworkerCredentials.getHeaders()
         );
 
         result.prettyPrint();
